I played around with the code, some, to see if I could fix the buttons. I also fixed a bunch of the filenames to avoid the filename too long issue with Windows.

--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@
   }
 .overlay_precision_boost_overdrive2 {
   position: absolute;
-  top: 400px;
+  top: 156px;
   bottom: 0;
   left: 0;
   right: 0;
